<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:override="true">Uportal</string>

    <string name="phone_mask">+ 7 (XXX) XXX XX XX</string>
    <string name="input_phone_number">Введите номер телефона</string>
    <string name="input_card_number">Введите номер карты</string>
    <string name="no_internet_connection">Нет интернет соединения. Попробуйте позже.</string>
    <string name="server_error">Ошибка сервера. Попробуйте позже</string>
    <string name="server_timeout_error">Ошибка сервера. Нет ответа от сервера. Попробуйте позже»</string>
    <string name="phone_number_incorrect">Номер телефона введен некорректно</string>
    <string name="card_number_incorrect">Номер карты введен некорректно</string>
    <string name="card_number">Номер карты</string>
    <string name="loading">Загрузка</string>

    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="input_login">Введите логин</string>
    <string name="input_password">Введите пароль</string>
    <string name="invalid_login_or_password">Неверный логин или пароль</string>
    <string name="users">Пользователи</string>
    <string name="authors">Авторы</string>
    <string name="select_authors">Выберите авторов</string>
    <string name="to_select_authors">Выбрать авторов</string>
    <string name="author_info">Информация об авторе</string>
    <string name="publication_info">Информация о публикации</string>
    <string name="publications">Публикации</string>
    <string name="create_publication">Создать публикацию</string>
    <string name="update_publication">Обновить публикацию</string>
    <string name="edit_publication">Редактировать публикацию</string>
    <string name="logout">Выйти</string>
    <string name="author_publications">Публикации автора</string>
    <string name="publications_count">Количество публикаций</string>
    <string name="search">Поиск</string>
    <string name="publication_authors">Авторы публикации</string>
    <string name="empty">Пусто</string>
    <string name="title">Название</string>
    <string name="description">Описание</string>
    <string name="extra_fields">Дополнительные поля</string>
    <string name="add_field">Добавить поле</string>
    <string name="value">Значение</string>

    <string name="title_validation_error">Название слишком короткое</string>
    <string name="description_validation_error">Описание слишком короткое</string>
    <string name="author_validation_error">Не выбрано ни олного автора</string>
    <string name="fields_validation_error">Не все дополнительные поля заполнены</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>

    <string name="name_validation_error">Имя слишком короткое</string>
    <string name="lastname_validation_error">Фамилия слишком короткая</string>

    <string name="create_author">Создать автора</string>
    <string name="update_author">Обновить автора</string>

    <string name="firstname">Имя</string>
    <string name="firstname_en">Имя (англ.)</string>
    <string name="lastname">Фамилия</string>
    <string name="lastname_en">Фамилия (англ.)</string>
    <string name="middlename">Отчество</string>
    <string name="middlename_en">Отчество (англ.)</string>

    <string name="successfully">Успешно</string>
    <string name="cant_delete_author">Этого автора удалить нельзя</string>
</resources>
