<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".ui.activity.auth.AuthActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <FrameLayout
        android:layout_width="270dp"
        android:layout_height="45dp">

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/auth_input_bg"
            android:hint="@string/login"
            android:inputType="textNoSuggestions"
            android:text="admin@etu.ru" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:adjustViewBounds="true"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_mail" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/auth_input_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="H123sadasd" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:adjustViewBounds="true"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_key" />
    </FrameLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btLogin"
        style="@style/MainButton"
        android:layout_width="200dp"
        android:layout_marginBottom="70dp"
        android:text="@string/sign_in" />
</LinearLayout>